--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -7,8 +7,8 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding: 32px;
+  margin: 12px;
 }
 
 .two {
@@ -23,6 +23,15 @@ body {
   border: 3px solid brown;
   width: 200px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  margin-top: 48px;
+  padding: 32px;
+  margin-left: 20em;
 }
+
+/* 
+- Div One and Div Three have 32px between their text and border.
+- Div One has 12px between it and any other element on the page.
+- There is a 48px gap between Div Two and Div Three.
+- Div Three is aligned to the right.
+- Div Three's alignment is achieved using `margin` (and not float, flexbox, etc.). 
+*/ 
