--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,7 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+
 }
 
 .logo {
@@ -9,6 +10,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+
 }
 
 ul {
@@ -22,4 +24,19 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  padding: 8px;
+}
+
+ul {
+  display:flex;
+  margin:0;
+  padding:0;
+  gap: 10px;
 }
