--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -35,6 +35,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  justify-content: right;
 }
 
 a {
@@ -46,3 +47,24 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* Jonathan's Solution */
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
+
+.left, .right {
+  display:flex;
+  align-items: center;
+  gap:16px;
+}
+
