--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,28 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Jonathan's Solution */
+.modal {
+  display:flex;
+  padding:16px;
+  gap:16px
+}
+
+.header {
+  display:flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+.icon {
+  flex-shrink: 0;
+}
+
+.text {
+  margin-bottom: 16px;
+}
+
+
+
